<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Massttr Fixer</string>
    <string name="channel_id_chat">Chat</string>
    <string name="no_internet">No Internet Connected</string>
    <string name="maps_api_key">AIzaSyBJrJjwOvvii1IUhkjz3XaYPpLic_OU9Xo</string>
    <string name="msg_no_internet">No Internet connection found. Check your connection try again.</string>
    <string name="something_went_wrong">Something went wrong please try again…</string>
    <string name="time_out">Response time out</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="i_am_so_happy_to_see_you">We\'re so happy to see you, you can continue to login for manage your work</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_mobile_number">Enter Phone Number</string>
    <string name="request_otp">Request Code</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="inbox">Inbox</string>
    <string-array name="select_reason">
        <item>Select Reason</item>
        <item>General</item>
        <item>Order Tracking</item>
        <item>Payment Related</item>
        <item>Service</item>
        <item>Profile</item>
        <item>Other</item>
    </string-array>
    <string name="image_description">image Description</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="manage">Manage</string>
    <string name="earning">Earning</string>
    <string name="help_center">Help Center</string>
    <string name="logout">Logout?</string>
    <string name="create_an_account">Create an account so you can manage your personal work</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="create_a_account_so_you">Create an account so you can manage your personal work</string>
    <string name="john_smith">John Smith</string>
    <string name="_9889854">9889854</string>
    <string name="don_t_have_an">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="please_enter_number">Please enter valid number</string>
    <string name="enter_valid_mobile_number">Please enter valid phone number</string>
    <string name="success_">Success</string>
    <string name="otp_resend_">OTP resend successfully</string>
    <string name="please_enter_Fname">Please Enter first name</string>
    <string name="please_enter_Lname">Please Enter Last name</string>
    <string name="please_enter_name">Please Enter name</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_4_digit">Please enter the 4-digit code send to you at</string>
    <string name="verify">Verify</string>
    <string name="if_you_didn_t_receive_a_code">If you didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="change"><font color='#FFCB31'>(Change)</font></string>
    <string name="please_enter_OTP">Please enter otp</string>
    <string name="verified">Verified</string>
    <string name="your_mobile_number_has_been">Your phone number has been successfully verified</string>
    <string name="done">Done</string>
    <string name="select_language">Select Language</string>
    <string name="please_select_the_language">Please select the language you can Understand better.</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="continuee">Continue</string>
    <string name="thank_you">Thank you!</string>
    <string name="your_profile_has_been_successfully_created">Your profile has been successfully created.</string>
    <string name="please_enter_document">Please enter document name</string>
    <string name="faq">FAQ</string>
    <string name="selected_Date">%d/%d/%d</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="privacy_policy_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </string>
    <string name="add_or_upload_documents">Add or upload documents</string>
    <string name="education_document">Education Document</string>
    <string name="enter_your_education_document">Please enter education document</string>
    <string name="upload_document">Please upload education document</string>
    <string name="submit">Submit</string>
    <string name="add_and_upload_your_document">Add or Upload Documents</string>
    <string name="notification">Notifications</string>
    <string name="available">Available</string>
    <string name="my_upcoming_fix">My Upcoming Fix</string>
    <string name="your_task_has_now_ended">Your task has now ended</string>
    <string name="end_task">End Task</string>
    <string name="are_you_sure_you_want_to_end_the_task">Are you sure you want to end the task?</string>
    <string name="no">No</string>
    <string name="user_name">User Name</string>
    <string name="_30">$30</string>
    <string name="chat">Chat</string>
    <string name="lorem_iphum_is">Lorem Iphum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="contani_tasks">Lorem Iphum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="_25_5_2020_3_30_pm">25–5–2020, 3:30 PMً</string>
    <string name="pending">PENDING</string>
    <string name="required_equipment">Required Equipment</string>
    <string name="gril_machine">GRIL MACHINE</string>
    <string name="pvc_pipe">PVC PIPE</string>
    <string name="tee_joiner">TEE JOINER</string>
    <string name="not_available">Not Available</string>
    <string name="lorem_ipsum_is_simply_dummy">"Lorem ipsum is simply dummy text printing and typesetting industry…</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="you_have_received_a_new_task_request">You have received a new task request</string>
    <string name="_09_43_am">09:43 AMً</string>
    <string name="view_receipt">View Receipt</string>
    <string name="complete_task">Completed Task</string>
    <string name="earnings">Earnings</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_first_name_here">Enter a full Name</string>
    <string name="enter_last_name_here">Enter Last Name Here</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_company_email_id" translatable="false" tools:ignore="ExtraTranslation">Enter Company Email ID</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="zip_code">ZIP Code</string>
    <string name="address">Address</string>
    <string name="please_choose">Please choose DOB</string>
    <string name="please_enter_address">Please Enter Address</string>
    <string name="please_enter_company_name">Please Enter Company name</string>
    <string name="please_enter_cvr">Please Enter CVR Number</string>
    <string name="please_enter_add">Please Enter company address</string>
    <string name="please_enter_service">Please Enter Services</string>
    <string name="please_enter_categories">Please Enter Categories</string>
    <string name="please_enter_skills">Please Enter Skills</string>
    <string name="please_enter_services">Please describe services</string>
    <string name="registration">Registration</string>
    <string name="fixer_registration">Fixer Registration</string>
    <string name="next">Next</string>
    <string name="available_tasks">Available Tasks</string>
    <string name="company_name">Company Name</string>
    <string name="company_details">Company Details</string>
    <string name="_50km">50km</string>
    <string name="km">"%1$s km"</string>
    <string name="km_"> km"</string>
    <string name="iraq">Iraq</string>
    <string name="personal_details">Personal Details</string>
    <string name="cvr_number">CVR-Number</string>
    <string name="company_e_mail_id">Company E-mail ID</string>
    <string name="company_to_receive_the_receipt">click here if you wish your company to receive the receipt</string>
    <string name="previous">Previous</string>
    <string name="documents">Documents</string>
    <string name="identification">Identification\n(driving license/passport)</string>
    <string name="driving_license_passport">Upload the necessary document</string>
    <string name="upload_driving_license_passport">Upload driving license/passport</string>
    <string name="health_insurance_card">Health insurance card</string>
    <string name="education">Education</string>
    <string name="other_documents">Other documents</string>
    <string name="add">Add</string>
    <string name="service">Service</string>
    <string name="select_type_of_service">Select type of service</string>
    <string name="select_subcategories">Select subcategories</string>
    <string name="add_your_skills">Add your skills</string>
    <string name="briefly_describe_your_services">Briefly describe your services</string>
    <string name="cancle_task">Cancel Task</string>
    <string name="start_task">Start Task</string>
    <string name="type">Type…</string>
    <string name="photos_of_the_task">Photos of the task</string>
    <string name="online">\u25CF Online</string>
    <string name="offline">Offline</string>
    <string name="add_task_photo">Add task Photo</string>
    <string name="add_or_upload_task_photo">Add or Upload Task Photo</string>
    <string name="your_task_start_now">Your task start now.</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="we_have_received_your_request_your_task_is_now_cancelled">We have received your request your task is now cancelled.</string>
    <string name="go_to_home">Go to Home</string>
    <string name="yes">Yes</string>
    <string name="good_job">Good Job!</string>
    <string name="available_job">Available job</string>
    <string name="accept">Accept</string>
    <string name="photos_of_the_completed_task">Photos of the completed task</string>
    <string name="download">Download</string>
    <string name="your_receipt_has_been_successfully_downloaded">Your receipt has been successfully Downloaded.</string>
    <string name="identification_driving_license_passport">Identification\n(driving license/passport)</string>
    <string name="enter_name">Enter Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="task">Task</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="no_notification">No Notification</string>
    <string name="no_messages_in_your_inbox_a_yet">No messages in your inbox a yet!</string>
    <string name="no_task_found">No Task Found</string>
    <string name="you_have_not_any_task_yet">You have not any task yet</string>
    <string name="enter_full_name_here">Enter Full Name here</string>
    <string name="city">City</string>
    <string name="state">State</string>
</resources>