<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.myprofiles.editProfile.fragment.CompanyDetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etCompanyName"
                        style="@style/styleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company_name" />

                    <EditText
                        android:id="@+id/etCVRNumber"
                        style="@style/styleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/cvr_number"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/etCompanyEmailAddress"
                        style="@style/styleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/company_e_mail_id"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/etZipCode"
                        style="@style/styleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/zip_code"
                        android:inputType="number" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <EditText
                            android:id="@+id/etCompanyAddress"
                            style="@style/styleEdit"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_80sdp"
                            android:gravity="top"
                            android:hint="@string/address"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_18sdp"
                            tools:ignore="RtlCompat" />

                        <ImageView
                            android:id="@+id/imgLocation"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:background="@drawable/bg_location_round"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/_6sdp"
                            android:src="@drawable/ic_map" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>