<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_5sdp"
        tools:context=".ui.main.notification.NotificationFragment">

        <RelativeLayout
            android:id="@+id/llTask"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvAvailable"
                style="@style/styleTextSemiMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/available_tasks"
                android:textColor="@color/colorBlackHelp"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvKm"
                style="@style/styleTextSemiMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:gravity="end"
                android:text="@string/_50km"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"
                app:drawableStartCompat="@drawable/ic_location_yellow" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFixerTask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/hello_blank_fragment"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTask"
            tools:itemCount="5"
            tools:listitem="@layout/list_item_available_task" />

        <LinearLayout
            android:id="@+id/llNoTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/img_no_order"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/styleTextBold"
                android:textSize="@dimen/_15sdp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/no_task_found"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/styleTextBold"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/you_have_not_any_task_yet"/>




        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>