<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.notification.NotificationFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar_two" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotification"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/hello_blank_fragment"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:itemCount="5"
            tools:listitem="@layout/list_item_notification" />

        <LinearLayout
            android:id="@+id/viewNoFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/img_no_notification" />

            <TextView
                style="@style/styleTextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_notification"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_15sdp" />

            <TextView
                style="@style/styleTextSemiMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/no_messages_in_your_inbox_a_yet"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>